# shape-map-local-runner

./: .gitignore  CITATION.cff  LICENSE  README.md  SHAPE-MaP-Local-Runner.html  pyproject.toml  requirements.txt  start_shape_map_web.bat
.github/workflows/: ci.yml
scripts/: __init__.py  check_shapemapper2.ps1  install_shapemapper2.ps1  run_shape_map_local.ps1  scan_barcodes.py  shape_map_local.py  start_local_web.ps1  web_app.py
templates/: project.example.json  project.tiled_amplicons.example.json
tests/: test_core_logic.py
