[project]
name = "shape-map-local-runner"
version = "0.1.0"
description = "A local web interface for demultiplexing SHAPE-MaP reads and running ShapeMapper2 under WSL."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "SHAPE-MaP Local Runner contributors" }
]
keywords = ["SHAPE-MaP", "RNA", "bioinformatics", "ShapeMapper2", "RNA structure"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.urls]
Homepage = "https://github.com/REPLACE-WITH-OWNER/shape-map-local-runner"
Repository = "https://github.com/REPLACE-WITH-OWNER/shape-map-local-runner"
